# internal/dto/question.go
@@ -1,0 +1,10 @@
+package dto
+
+import "backend/internal/domains"
+
+type QuestionDTO struct {
+	User    domains.User     `json:"user"`
+	Subject domains.Subject  `json:"subject"`
+	Class   domains.Class    `json:"class"`
+	Data    domains.Question `json:"data"`
+} // @name QuestionDTO
