# internal/dto/responses/question.go
@@ -1,11 +1,14 @@
 package responses
 
-import "backend/internal/domains"
+import (
+	"backend/internal/domains"
+	"backend/internal/dto"
+)
 
 type CreateQuestion struct {
 	Question domains.Question `json:"question"`
 } // @name CreateQuestionRes
 
 type GetAllQuestions struct {
-	Questions []domains.Question `json:"questions"`
+	Items []dto.QuestionDTO `json:"items"`
 } // @name GetAllQuestionsRes
